Test for nullptr before dereferencing the screen

Touch event processing might still be ongoing even after the screen
has been disconnected. If that screen was also the primary screen, we
would dereference nullptr.

Check for nullptr to avoid potential crashes during shutdown.

Fixes: QTBUG-95192
Change-Id: I49ccd30c4126fe12cf5bb675e532e6e59b40b9c1
Reviewed-by: Shawn Rutledge <shawn.rutledge@qt.io>
(cherry picked from commit 30b0b72453239666952ab516c618c19f0ca0aca6)
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>